--- a/navigation/navigation.css
+++ b/navigation/navigation.css
@@ -44,20 +44,17 @@ body {
 }
 
 .navigation-2 {
-  min-width: 40em;
   padding: .5em;
   
   display: flex;
-  justify-content:space-around;
+  justify-content: space-around;
   
   list-style: none;
   background-color: #ffc0cb;
 }
 
 .navigation-2-link {
-  padding: 1em;
-
-  display: block;
+  padding: 1em 5em;
 
   border-right: .125em solid red;
   color: #ff0000;
@@ -66,3 +63,14 @@ body {
 .navigation-2-link:last-child {
   border-right: 0;
 }
+
+.navigation-3 {
+  padding: .5em;
+  
+  display: flex;
+  justify-content: center;
+  
+  list-style: none;
+  background-color: #ffc0cb;
+}
+
