--- a/navigation/navigation.css
+++ b/navigation/navigation.css
@@ -65,7 +65,7 @@ body {
 }
 
 .navigation-3 {
-  padding: .5em;
+  min-width: 40em;
   
   display: flex;
   justify-content: center;
@@ -74,3 +74,22 @@ body {
   background-color: #ffc0cb;
 }
 
+.navigation-3-link {
+  padding: 1em;
+  margin: .5em 0;
+
+  border-left: .125em solid red;
+  color: #ff0000;
+}
+
+.logo {
+  margin-right: auto;
+  align-content: center;
+  padding: .5em;
+
+  font-size: 24px;
+  font-weight: bold;
+  border-left: .125em solid red;
+  background-color: #ff0000;
+  color: white;
+}
