--- a/centering/centering.css
+++ b/centering/centering.css
@@ -3,13 +3,11 @@
 }
 
 body {
+  margin: 0;
+
   font-family: Arial, Helvetica, sans-serif;
   font-size: 100%;
   background-color: #eee;
-}
-
-section {
-  margin: 10em 0;
 }
 
 h1 {
@@ -21,6 +19,8 @@ p {
 }
 
 .center {
+  min-height: 100vh;
+
   display: flex;
   justify-content: center;
   align-items: center;
@@ -52,4 +52,3 @@ p {
 .align-stretch {
   align-self: stretch;
 }
-
