--- a/layout/layout.css
+++ b/layout/layout.css
@@ -37,6 +37,16 @@ main {
   background-color: white;
 }
 
+footer {
+  margin-top: auto;
+
+  background-color: #eee;
+}
+
+footer p {
+  padding-left: 1em;
+}
+
 aside {
   padding: 1em;
   width: 10em;
@@ -62,4 +72,14 @@ aside {
 
 .stretch {
   align-self: stretch;
+}
+
+article {
+  padding: 1em;
+  width: 30em;
+
+  display: flex;
+  flex-direction: column;
+
+  background-color: white;
 }
