--- a/layout/layout.css
+++ b/layout/layout.css
@@ -83,3 +83,34 @@ article {
 
   background-color: white;
 }
+
+@media only screen and (max-width: 960px) {
+
+  .center {
+    flex-direction: column;
+    justify-content: flex-start;
+  }
+
+  .centering-container {
+    width: 100%;
+    margin: 0;
+  }
+
+  nav {
+    width: 100%;
+
+    order: 2;
+  }
+
+  article {
+    width: 100%;
+
+    order: 1;
+  }
+
+  aside {
+    width: 100%;
+    
+    order: 3;
+  }
+}
