--- a/layout/layout.css
+++ b/layout/layout.css
@@ -84,6 +84,54 @@ article {
   background-color: white;
 }
 
+.logo {
+  margin-right: auto;
+  align-content: center;
+  padding: .5em;
+
+  font-size: 1.5em;
+  font-weight: bold;
+}
+
+.top-navigation {
+  display: flex;
+  flex: 1 0 100%;
+
+  align-items: center;
+  background-color: #eee;
+}
+
+.navigation-link {
+  padding: 1em;
+  margin: .5em 0;
+
+  border-left: .125em solid blue;
+  color: blue;
+}
+
+.navigation-link-1 {
+  padding: 1em;
+  margin: .5em 0;
+
+  border-left: 0;
+  color: blue;
+}
+
+.centering-2-container {
+  width: 50em;
+  min-height: 40em;
+  
+  display: flex;
+  flex-wrap: wrap;
+  align-items: stretch;
+
+  border: .125em dashed #666;
+}
+
+article.stretch{
+  flex: 1;
+}
+
 @media only screen and (max-width: 960px) {
 
   .center {
@@ -110,7 +158,7 @@ article {
 
   aside {
     width: 100%;
-    
+
     order: 3;
   }
 }
